# stereo_depth_gl

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: FindHalide.cmake  FindLIBIGL.cmake
config/: config.cfg
data/: graph_viewer_scan_poses_00.txt
include/stereo_depth_cl/: Core.h  DataLoader.h  DepthEstimatorCL.h  DepthEstimatorCPU.h  DepthEstimatorGL.h  DepthEstimatorGL2.h  DepthEstimatorRenegade.h  Frame.h  Gui.h  Mesh.h  MiscUtils.h  Pattern.h  Profiler.h  RosBagPlayer.h  Scene.h  SurfelSplatter.h  Texturer.h  ringbuffer.h
include/stereo_depth_gl/: Core.h  DataLoader.h  DataLoaderPNG.h  DataLoaderRos.h  DepthEstimatorCPU.h  DepthEstimatorGL.h  DepthEstimatorHalide.h  DepthEstimatorRenegade.h  Frame.h  Gui.h  LabelMngr.h  Mesh.h  MiscUtils.h  Pattern.h  Profiler.h  RosTools.h  Scene.h  Texturer.h  ringbuffer.h
kernels_cl/: depth_estimation.cl  img_proc_test.cl
launch/: stereo_depth_cl.launch  stereo_depth_gl.launch
shaders/: compute_color_map.glsl  compute_copy_to_texture.glsl  compute_copy_to_texture_fbo.glsl  compute_create_seeds.glsl  compute_debug.glsl  compute_fill_rgb.glsl  compute_hessian_blurred.glsl  compute_hessian_pointwise.glsl  compute_init_seeds.glsl  compute_normalize_argmax.glsl  compute_one_class_prob.glsl  compute_trace_seeds.glsl  compute_trace_seeds_icl.glsl  compute_update_depth.glsl  copy_from_texture.glsl  copy_from_texture_fbo.glsl  light_frag_shader.glsl  light_vert_shader.glsl  update_TVL1_primal_dual.glsl  update_TVL1_primal_dual_fbo_frag.glsl  update_TVL1_primal_dual_fbo_vert.glsl  update_TVL1_primal_dual_texture.glsl  uv_fuse_frag_shader.glsl  uv_fuse_vert_shader.glsl
shaders/surfel/: splat_frag_shader.glsl  splat_geom_shader.glsl  splat_vert_shader.glsl
src/: .fuse_hidden000148e40000007c  Core.cxx  DataLoader.cxx  DataLoaderPNG.cxx  DataLoaderRos.cxx  DepthEstimatorCL.cxx  DepthEstimatorCPU.cxx  DepthEstimatorCPU.meh  DepthEstimatorGL.cxx  DepthEstimatorGL.meh  DepthEstimatorGL2.cxx  DepthEstimatorGL2.meh  DepthEstimatorHalide.cxx  DepthEstimatorRenegade.cxx  Gui.cxx  LabelMngr.cxx  Mesh.cxx  Pattern.cxx  RosBagPlayer.cxx  Scene.cxx  SurfelSplatter.cxx  Texturer.cxx  main.cxx
src/renegade_module/: depth_filter.cpp  depth_filter.h  depth_opt.h  depth_point.cpp  depth_point.h  types.h
